<resources>
    <string name="app_name">MrFox</string>
    <string name="titulo">MRFOX</string>
    <string name="camera">camera</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="sign">SIGN IN</string>
    <string name="pass">password</string>
    <string name="user">userName</string>
    <string name="title_activity_navigator">NavigatorActivity</string>
    <string name="action_settings">Settings</string>
    <string name="listaUp">lista actualizada</string>
    <string name="textSnack">Estamos trabajando en ello...</string>
    <string name="mrfox">MrFox</string>
    <string name="uninstall">UNINSTALL</string>
    <string name="update">UPDATE</string>
    <string name="parrafada">Es un mamifero carnivoro que se encuentra en casi todos los continentes, existen mas de 120 especies diferentes de zorros.
Tienen un promedio de vida de unos 10 años, aunque pueden vivir mas o menos, pero no se conocen ninguno que haya vivido mas de 12 años.
Si bien la morfología del ejemplar puede variar según la especie de zorro de la que se trate, en general todos comparten un hocico fino y una cola bien espesa con su pelaje que en general es de color marron caramelo; luego lo demas puede variar en cuanto al largo del pelaje por ejemplo según el habitat dónde viva si es en una zona ártica o no por ejemplo.
En ciertas zonas como en Australia son considerados una plaga, convirtiéndose en animales dañinos e invasivos; sin embargo pueden ser muy útiles para propósitos agrícolas. Han sido empleados para controlar plagas en granjas frutícolas, dejando la fruta intacta.
    </string>
</resources>
