<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/activity_my_mainID"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.javier.mrfox.MyMain">

    <ImageView
        android:id="@+id/ivPrincipal"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/forest" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/circularImagen"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_below="@id/ivPrincipal"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/fox"
            app:civ_border_color="#EEE"
            app:civ_border_width="0dp"
            app:civ_shadow="false"
            app:civ_shadow_color="#999"
            app:civ_shadow_radius="10" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="MrFox"
            android:textSize="30dp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="16dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnUninstall"
            android:background="@drawable/button_custom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:layout_weight="1"
            android:layout_marginRight="9dp"
            android:layout_marginLeft="5dp"
            android:text="@string/uninstall" />

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/button_pressed"
            android:background="@color/colorPrimary"
            android:layout_weight="1"
            android:text="@string/update" />
    </LinearLayout>
    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/myswipe"
        android:layout_height="match_parent"
        android:layout_width="match_parent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tvTexto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/parrafada" />
            </LinearLayout>
        </ScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>

</LinearLayout>

